// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
      totalling 
      <span>
        $2.35
      </span>
      <div
        className="page-header__actions"
      >
        <[object Object]
          className="button"
          to="/create"
        >
          Add Expense
        </[object Object]>
      </div>
    </h1>
  </div>
</div>
`;

exports[`should render ExpensesSummary with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span />
       
      expenses
      totalling 
      <span>
        $0.00
      </span>
      <div
        className="page-header__actions"
      >
        <[object Object]
          className="button"
          to="/create"
        >
          Add Expense
        </[object Object]>
      </div>
    </h1>
  </div>
</div>
`;
